<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jit.AgriIn.ui.activity.config.ConfigUpdateActivity">
    <include
        layout="@layout/include_toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:background="@color/gray5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_item_margin_top"/>
            <RadioGroup
                android:id="@+id/radioCategory"
                android:paddingTop="@dimen/common_dimension_12"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_xia"
                    android:layout_marginLeft="@dimen/common_dimension_12"
                    android:text="虾"
                    android:padding="@dimen/common_dimension_8"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/selector_bg_category"
                    android:textSize="@dimen/mediumTextSize"
                    android:button="@null"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_yu"
                    android:layout_marginLeft="@dimen/common_dimension_12"
                    android:padding="@dimen/common_dimension_8"
                    android:text="鱼"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_bg_category"
                    android:textSize="@dimen/mediumTextSize"
                    android:button="@null"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_xie"
                    android:layout_marginLeft="@dimen/common_dimension_12"
                    android:padding="@dimen/common_dimension_8"
                    android:text="螃蟹"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_bg_category"
                    android:textSize="@dimen/mediumTextSize"
                    android:button="@null"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <com.allen.library.SuperTextView
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvPondChoose"
                app:sLeftTextString="生产单元"
                app:sRightTextString="点击选择生产单元"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvRobotChoose"
                app:sLeftTextString="机器人"
                app:sRightTextString="点击选择巡航机器人"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                android:visibility="gone"
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvCruiseMode"
                app:sLeftTextString="@string/cruise_mode_title"
                app:sRightTextString="@string/input_cruise_mode"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_dimension_35">
                <View
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:background="@color/colorTheme" />
                <TextView
                    android:text="巡航设置"
                    android:textSize="@dimen/mediumTextSize"
                    android:layout_marginLeft="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <com.allen.library.SuperTextView
                app:sDividerLineType="both"
                app:sRightTextSize="@dimen/SmallTextSize"
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvCameraDepth"
                app:sLeftTextString="@string/camera_depth_title"
                app:sRightTextString="20"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                app:sRightTextSize="@dimen/SmallTextSize"
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvSensorDepth"
                app:sLeftTextString="@string/sensor_depth_title"
                app:sRightTextString="50"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>

            <com.allen.library.SuperTextView
                app:sRightTextSize="@dimen/SmallTextSize"
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvCruiseSpeed"
                app:sLeftTextString="@string/cruise_speed_title"
                app:sRightTextString="@string/input_cruise_speed"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                app:sRightTextSize="@dimen/SmallTextSize"
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvCruiseNum"
                app:sLeftTextString="@string/cruise_num_title"
                app:sRightTextString="1"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                app:sRightIconRes="@drawable/shape_arrow"
                android:id="@+id/stvReturnCruiseSpeed"
                app:sRightTextSize="@dimen/SmallTextSize"
                app:sLeftTextString="@string/return_cruise_num_title"
                app:sRightTextString="@string/input_return_speed"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            </com.allen.library.SuperTextView>
            <com.allen.library.SuperTextView
                app:sRightTextSize="@dimen/SmallTextSize"
                android:id="@+id/stvDrive"
                app:sLeftTextString="@string/drive_bird_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:sRightViewType="switchBtn"
                app:sSwitchMinWidth="40dp"
                app:sThumbResource="@drawable/cb_thumb"
                app:sTrackResource="@drawable/cb_track">
            </com.allen.library.SuperTextView>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llFeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_dimension_35">
                    <View
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="2dp"
                        android:layout_height="18dp"
                        android:background="@color/colorTheme" />
                    <TextView
                        android:text="投饵设置"
                        android:textSize="@dimen/mediumTextSize"
                        android:layout_marginLeft="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <com.allen.library.SuperTextView
                    app:sDividerLineType="both"
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvFeedName"
                    app:sLeftTextString="@string/feed_name_title"
                    app:sRightTextString="@string/input_feed_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
                <com.allen.library.SuperTextView
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvFeedWeight"
                    app:sLeftTextString="@string/feed_weight_title"
                    app:sRightTextString="@string/input_feed_weight"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
                <com.allen.library.SuperTextView
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvFeedSpeed"
                    app:sLeftTextString="@string/feed_speed_title"
                    app:sRightTextString="@string/input_feed_speed"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llDrug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_dimension_35">
                    <View
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="2dp"
                        android:layout_height="18dp"
                        android:background="@color/colorTheme" />

                    <TextView
                        android:text="喷药设置"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/mediumTextSize"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <com.allen.library.SuperTextView
                    app:sDividerLineType="both"
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvDrugName"
                    app:sLeftTextString="@string/drug_name_title"
                    app:sRightTextString="@string/input_medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
                <com.allen.library.SuperTextView
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvDrugWeight"
                    app:sLeftTextString="@string/drug_weight_num_title"
                    app:sRightTextString="@string/input_medicine_weight"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
                <com.allen.library.SuperTextView
                    app:sRightTextSize="@dimen/SmallTextSize"
                    app:sRightIconRes="@drawable/shape_arrow"
                    android:id="@+id/stvDrugSpeed"
                    app:sLeftTextString="@string/drug_speed_title"
                    app:sRightTextString="@string/input_medicine_speed"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                </com.allen.library.SuperTextView>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/common_dimension_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/rgMode"
                    android:layout_marginLeft="100dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_mode_1"
                        android:text="巡航"
                        android:padding="@dimen/common_dimension_8"
                        android:textSize="@dimen/mediumTextSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rb_mode_2"
                        android:text="巡航 + 投饵"
                        android:padding="@dimen/common_dimension_8"
                        android:textSize="@dimen/mediumTextSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rb_mode_3"
                        android:text="巡航 + 投饵 + 喷药"
                        android:padding="@dimen/common_dimension_8"
                        android:textSize="@dimen/mediumTextSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
